Fix overflow x problem

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 #root {
-  @apply overflow-x-hidden
+  @apply overflow-x-hidden w-full
 }
 
 
